tests/script_errors/arith_bad_shift_2/error.txt
Error: 
    1 | 42 >> 2.0
      | ^^^^^^^^^ The binary operation `>>` is not defined for the type `integer` and `float`